Refactor : 상수 네이밍 변경